<resources>
    <string name="app_name">PracaInzynierskaKamilWnek</string>
    <string name="birthday">Data urodzenia</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="email">E-mail</string>
    <string name="password">Hasło</string>
    <string name="passwordCheck">Powtórz hasło</string>
    <string name="gender">Płeć:</string>
    <string name="woman">Kobieta</string>
    <string name="man">Mężczyzna</string>
    <string name="age">Wiek</string>
    <string name="height">Wzrost</string>
    <string name="weight">Waga</string>
    <string name="signUp">Zarejestruj się</string>
    <string name="logIn">Zaloguj się</string>
    <string name="forgetPassword">Nie pamiętasz hasła?</string>
    <string name="wrongPassword">Podane hasła różnią się!</string>
    <string name="noGenderSelected">Nie wybrano płci</string>
    <string name="noDateSelected">Wybierz datę urodzenia</string>
    <string name="wrongEmail">Wprowadź adres e-mail</string>
    <string name="wrongUsername">Wprowadź nazwę użytkownika</string>
    <string name="enterPassword">Wpraowdź hasło</string>
    <string name="enterHeight">Wprowadź swój wzrost</string>
    <string name="enterWeight">Wprowadź swoją wagę</string>
    <string name="emailVerificationTitle">Zweryfikuj swój adres e-mail</string>
    <string name="emailVerificationMessage">Wysłaliśmy na Twoją pocztę wiadomość z linkiem aktywującym konto. Kliknij w niego aby móc zalogować się do aplikacji.</string>
    <string name="yes">tak</string>
    <string name="title_activity_main2">Praca Inżynierska</string>
    <string name="title_profile">Profil</string>
    <string name="title_pedometer">Krokomierz</string>
    <string name="title_activity">Aktywność</string>
    <string name="logOut">Wyloguj się</string>
    <string name="pleaseVerifyEmail">Proszę zweryfikować swój adres email</string>
    <string name="forgetPasswordAlertTitle">Czy zresetować hasło?</string>
    <string name="forgetPasswordAlertMeesage">Podaj adres e-mail Twojego konta, na który wyślemy instrukcje resetowania hasła</string>
    <string name="camcel">anuluj</string>
    <string name="somethingWentWrong">Wystąpił błąd. Spróbuj ponownie później.</string>
    <string name="resetPasswordSuccess">Udało się zrestartować hasło</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noInternetConnection">Brak połączenia z internetem. Spróbuj ponownie później.</string>
    <string name="invalidEmailOrPassword">Błędny email lub hasło</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="yourPosition">Twoja pozycja</string>
    <string name="averagePace">śr. tempo [min/km]</string>
    <string name="calories">Kalorie [kcal]</string>
    <string name="distance_km">Dystans [km]</string>
    <string name="distance_m">Dystans [m]</string>
    <string name="time">Czas</string>
    <string name="gpsNotFound">Nie znaleziono sygnału GPS, lub sygnał jest za słaby. Spróbuj ponownie później.</string>
    <string name="averageSpeed">średnia prędkość [km/h]</string>
    <string name="startActivityDate">Data rozpoczęcia aktywności</string>
    <string name="title_progress">Historia</string>
    <string name="title_progress_long">Historia aktywności</string>
    <string name="deleteActivityTitle">Czy jesteś pewien?</string>
    <string name="deleteActivityMessage">Czy na pewno chcesz usunąć aktywność?</string>
    <string name="no">nie</string>
    <string name="steps">kroki</string>
    <string name="distance">Dystans</string>
    <string name="stepsLeft">pozostałe kroki</string>
    <string name="stepsToday">dzisiejsze kroki</string>
    <string name="stepsTarget">cel kroków: </string>
    <string name="dailySteps">dzienna ilość kroków</string>
    <string name="years">lat</string>
    <string name="registered">Korzysta z aplikacji od</string>
    <string name="pedometerNotificationTitle">Krokomierz</string>
    <string name="notifPedometerContent1">Możesz to zrobić!</string>
    <string name="notifPedometerContent2">Tak trzymaj!</string>
    <string name="notifPedometerContent3">Jeszcze tylko trochę a osiągniesz swój cel!</string>
    <string name="notifPedometerContent4">Już prawie! Zrób jescze kilka kroków.</string>
    <string name="notifPedometerContent5">Gratulacje! Osiągnąłeś swój cel.</string>
    <string name="selectActivity">Wybierz aktywność</string>
    <string name="dateHint">Wybierz czas rozpoczęcia aktywności</string>
    <string name="activityHint">Dotknij aby wybrać rodzaj aktywności</string>
    <string name="fillInDetails">Wypełnij wymagane pola</string>
    <string name="deleteActivity">Usuń aktywność</string>
    <string name="createActivity">Stwórz aktywność</string>
    <string name="activityInfo">Poczekaj aż ktoś dołączy do Twojej aktywności</string>
    <string name="noCompanionFound">Nie udało się znaleźć nikogo do wspólniej aktywności. Spróbuj ponownie później</string>
    <string name="ok">Ok</string>
    <string name="companionIsHere">Możesz rozpocząć wspólną aktywność!</string>
    <string name="away">stąd</string>
    <string name="join">Dołącz!</string>
    <string name="searchingForGPS">Szukam sygnału GPS...</string>
    <string name="searchingForNearby">Szukam osób w pobliżu</string>
    <string name="editProfile">Edytuj profil</string>
    <string name="stats">Statystyki</string>
    <string name="appInfo">Informacje o aplikacji</string>
    <string name="deleteProfile">Usuń profil</string>
    <string name="save">Zapisz zmiany</string>
    <string name="passwordChange">Zmień hasło</string>
    <string name="selectBirthday">Wybierz swoją datę urodzenia</string>
    <string name="deleteProfileTitle">Czy na pewno chcesz usunąć profil?</string>
    <string name="logOutTitle">Czy na pewno chcesz się wylogować?</string>
    <string name="applicationInfo">Aplikacja powstała jako część pracy inżynierskiej realizowanej na Politechnice Rzeszowskiej, na kierunku Mechatronika. Tematem pracy było zaprojektowanie aplikacji wspomagającej aktywność fizyczną osób starszych. Autorem aplikacji jest Kamil Wnęk</string>
    <string name="back">Powrót</string>
    <string name="stepsRecordText">Największa ilość kroków:</string>
    <string name="allStepsText">Łączna ilość kroków:</string>
    <string name="averageStepsText">Średnia ilość kroków:</string>
    <string name="activitiesCountText">Łączna ilość aktywności:</string>
    <string name="longestActivityText">Najdłuższa aktywność:</string>
    <string name="paceRecordText">Najszybsze Tempo:</string>
    <string name="totalDistanceText">łączny dystans aktywności:</string>
    <string name="totalTimeText">Łączny czas aktywności:</string>
    <string name="caloriesBurnedText">Spalone kalorie:</string>
    <string name="longestActivityTimeText">Najdłuższy czas aktywności:</string>
    <string name="nobodyNear">Nie udało się znaleźć nikogo w pobliżu</string>
    <string name="applicationName">Aplikacja wspomagająca aktywność fizyczną osób starszych</string>
    <string name="selectTime">Wybierz za ile minut rozpocznie się aktywność</string>
    <string name="titleJointActivity">razem</string>
    <string name="titleJointActivityLong">Wspólna aktywność</string>
    <string name="serviceBackground">Aplikacja działa w tle</string>
    <string name="joinToActivity">Dołącz do wspólnej aktywności</string>
    <string name="createJointActivity">Stwórz nową wspólną aktywność</string>
    <string name="joinToYourCompsnion">Idź w wyznaczone miejsce i dołącz do wspólnej aktywności</string>
    <string name="noResoultsFound">Nie odnaleziono wspólnej aktywności do której dołączyłeś. Możlie, że nie zdążyłeś dotrzeć na czas w wyznaczone miejsce.</string>

</resources>
