<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:padding="15dp"
                android:text="@string/applicationName"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="16dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="#64B4F5"
                android:textColorHighlight="#64B5F6"
                android:textColorLink="#64B5F6" />

            <TextView
                android:id="@+id/textViewWrongEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/wrongEmail"
                android:textColor="@color/errorInput"
                android:textSize="12sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="16dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textColor="#64B4F5"
                android:textColorHighlight="#64B5F6"
                android:textColorLink="#64B5F6" />

            <TextView
                android:id="@+id/textViewWrongUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/wrongUsername"
                android:textColor="@color/errorInput"
                android:textSize="12sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="16dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="#64B4F5"
                android:textColorHighlight="#64B5F6"
                android:textColorLink="#64B5F6" />

            <TextView
                android:id="@+id/textViewEnterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/enterPassword"
                android:textColor="@color/errorInput"
                android:textSize="12sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editTextPasswordCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="16dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/passwordCheck"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="#64B4F5"
                android:textColorHighlight="#64B5F6"
                android:textColorLink="#64B5F6" />


            <TextView
                android:id="@+id/textViewPassDoesNotMatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/wrongPassword"
                android:textColor="@color/errorInput"
                android:textSize="12sp"
                android:visibility="gone" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonWoman"
                    style="@android:style/Widget.Holo.Light.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:buttonTint="#FFFFFF"
                    android:text="@string/woman"
                    android:textColor="#FFFFFF"
                    android:textColorLink="#FFFFFF"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioButtonMan"
                    style="@android:style/Widget.Holo.Light.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:buttonTint="#FFFFFF"
                    android:checked="false"
                    android:text="@string/man"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#FFFFFF"
                    android:textColorLink="#FFFFFF"
                    android:textSize="18sp" />
            </RadioGroup>


            <TextView
                android:id="@+id/textViewNoGenderSelected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/noGenderSelected"
                android:textColor="@color/errorInput"
                android:textSize="12sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editTextBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="16dp"
                android:background="#FFFFFF"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/birthday"
                android:padding="8dp"
                android:textColor="#64B4F5"
                android:textColorHighlight="#64B5F6"
                android:textColorLink="#64B5F6" />

            <TextView
                android:id="@+id/textViewNoDateSelected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/noDateSelected"
                android:textColor="@color/errorInput"
                android:textSize="12sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editTextHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="16dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/height"
                android:inputType="number"
                android:padding="8dp"
                android:textColor="#64B4F5"
                android:textColorHighlight="#64B5F6"
                android:textColorLink="#64B5F6" />

            <TextView
                android:id="@+id/textViewEnterHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/enterHeight"
                android:textColor="@color/errorInput"
                android:textSize="12sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editTextWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="16dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/weight"
                android:inputType="number"
                android:padding="8dp"
                android:textColor="#64B4F5"
                android:textColorHighlight="#64B5F6"
                android:textColorLink="#64B5F6" />

            <TextView
                android:id="@+id/textViewEnterWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/enterWeight"
                android:textColor="@color/errorInput"
                android:textSize="12sp"
                android:visibility="gone" />

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp">

                <ImageButton
                    android:id="@+id/imageButtonSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:adjustViewBounds="true"
                    android:background="#00FFFFFF"
                    android:onClick="onClickSignUp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/button1" />

                <TextView
                    android:id="@+id/textViewSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/signUp"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </FrameLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>